<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
	<ScrollView android:id="@+id/ScrollView01" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
	>

	<LinearLayout android:id="@+id/LinearLayout01" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="vertical"
	>
		
	<ImageView android:id="@+id/ImageView01"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:background="@drawable/header"
	/>

	<TextView
		android:id="@+id/registerFormTitle"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="15px"
		android:text="@string/registerFormTitle"
	/>
	
	<EditText
		android:id="@+id/registerUsername"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:password="false"
		android:hint="@string/registerUsernameHint"
	/>

	<EditText
		android:id="@+id/registerPassword"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:password="true"
		android:hint="@string/registerPasswordHint"
	/>
	
	<EditText
		android:id="@+id/registerEmail"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:password="false"
		android:hint="@string/registerEmailHint"
	/>
	
	<Button
		android:id="@+id/registerRegister"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/registerBtn"
	/>

	</LinearLayout>
	</ScrollView>
</LinearLayout>