<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableRow android:paddingTop="2dp"
              android:paddingBottom="2dp">
        <LinearLayout android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:paddingLeft="10dp">
            <TextView
                android:text="@string/showLanguagePrompt"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text=""
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"/>
        </LinearLayout>
        <LinearLayout android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingRight="10dp">
            <Spinner
                android:id="@+id/showLanguageOptions"
                android:prompt="@string/showLanguagePrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090"/>

    <TableRow android:paddingTop="2dp"
              android:paddingBottom="2dp">
        <LinearLayout android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:paddingLeft="10dp">
            <TextView
                android:text="@string/showOrderPrompt"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text=""
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"/>
        </LinearLayout>
        <LinearLayout android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingRight="10dp">
            <Spinner
                android:id="@+id/showOrderOptions"
                android:prompt="@string/showOrderPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090"/>

    <TableRow android:paddingTop="2dp"
              android:paddingBottom="2dp">
        <LinearLayout android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:paddingLeft="10dp">
            <TextView
                android:text="@string/episodeOrderPrompt"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/episodeOrderPromptExtra"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingRight="10dp">
            <Spinner
                android:id="@+id/episodeOrderOptions"
                android:prompt="@string/episodeOrderPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090"/>

    <TableRow android:paddingTop="2dp"
              android:paddingBottom="2dp">
        <LinearLayout android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:paddingLeft="10dp">
            <TextView
                android:text="@string/storePasswordPrompt"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text=""
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingRight="10dp">
            <CheckBox
                android:id="@+id/showPasswordOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090"/>
</TableLayout>